src/net/http/http_client_parser.rl.cc

#line 1 "/programs/nemo/src/net/http/http_client_parser.rl"
/**
 * ragel 有限状态机简介
 *  基础代码块 %% {...} %%
 *  1. 类型
 *      machine: 定义一个有限状态机
 *      action: 当匹配语句时执行的动作(有点回调的味道)
 *  2. 关键字
 *      fpc: 指向当前的字符的指针，等价于P
 *      fc: 当前的字符，相当于(*fpc)
 *      buffer: 要解析的字符串
 *      p: buffer的起始位置
 *      pe: 指向buffer的终止位置
 *      cs: 当前状态
 *      fbreak: 让fpc + 1, 保存状态到cs，然后跳出解析的循环(结束解析)
 *      ascii: ascii字符，0...127
 * 3. 运算符
 *      >: 匹配开始调用action
 *      %: 匹配末尾调用action
 *      @: 除末态以外的任何状态调用action
 *      --: 求差集
 *      -: 求差集
 *      |: 求并集
 *      &: 求交集
 *      +: 重复至少一次
 *      *: 重复至少0次
 *      :>: 连接两个状态，右边的状态优先级高于左边的
 * 4. 内置有限状态机
 *      any: 字母表中的任何字符
 */

#include "net/http/http_client_parser.h"
#include <stdio.h>
#include <assert.h>
#include <stdlib.h>
#include <ctype.h>
#include <string.h>
#include <errno.h>

#define LEN(AT, FPC) (FPC - buffer - parser->AT)                //
#define MARK(M,FPC) (parser->M = (FPC) - buffer)                //
#define PTR_TO(F) (buffer + parser->F)                          //
#define check(A, M, ...) if(!(A)) {  errno=0; goto error; }     //


/** machine **/

#line 152 "/programs/nemo/src/net/http/http_client_parser.rl"


/** Data **/

#line 55 "/programs/nemo/src/net/http/http_client_parser.rl.cc"
static const int httpclient_parser_start = 1;
static const int httpclient_parser_first_final = 120;
static const int httpclient_parser_error = 0;

static const int httpclient_parser_en_main = 1;


#line 156 "/programs/nemo/src/net/http/http_client_parser.rl"

int httpclient_parser_init(httpclient_parser *parser)  {
    int cs = 0;

    
#line 69 "/programs/nemo/src/net/http/http_client_parser.rl.cc"
	{
	cs = httpclient_parser_start;
	}

#line 161 "/programs/nemo/src/net/http/http_client_parser.rl"

    parser->cs = cs;
    parser->body_start = 0;
    parser->content_len = -1;
    parser->chunked = 0;
    parser->chunks_done = 0;
    parser->mark = 0;
    parser->nread = 0;
    parser->field_len = 0;
    parser->field_start = 0;    
    parser->close = 0;

    return(1);
}


/** exec **/
int httpclient_parser_execute(httpclient_parser *parser, const char *buffer, size_t len, size_t off)  
{
    parser->nread = 0;
    parser->mark = 0;
    parser->field_len = 0;
    parser->field_start = 0;

    const char *p, *pe;
    int cs = parser->cs;

    assert(off <= len && "offset past end of buffer");

    p = buffer+off;
    pe = buffer+len;

    assert(*pe == '\0' && "pointer does not end on NUL");
    assert(pe - p == (int)len - (int)off && "pointers aren't same distance");


    
#line 112 "/programs/nemo/src/net/http/http_client_parser.rl.cc"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	if ( (*p) == 72 )
		goto tr2;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr0;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr0;
	} else
		goto tr0;
	goto st0;
st0:
cs = 0;
	goto _out;
tr0:
#line 49 "/programs/nemo/src/net/http/http_client_parser.rl"
	{MARK(mark, p); }
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 141 "/programs/nemo/src/net/http/http_client_parser.rl.cc"
	switch( (*p) ) {
		case 10: goto tr3;
		case 13: goto tr4;
		case 59: goto tr6;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st2;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st2;
	} else
		goto st2;
	goto st0;
tr3:
#line 90 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                         //块大小
        parser->chunked = 1;
        parser->content_len = strtol(PTR_TO(mark), NULL, 16);
        parser->chunks_done = parser->content_len <= 0;

        if(parser->chunks_done && parser->last_chunk) {
            parser->last_chunk(parser->data, PTR_TO(mark), LEN(mark, p));
        } else if(parser->chunk_size != NULL) {
            parser->chunk_size(parser->data, PTR_TO(mark), LEN(mark, p));
        } // else skip it
    }
#line 106 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                               //解析完成
        parser->body_start = p - buffer + 1; 
        if(parser->header_done != NULL)
            parser->header_done(parser->data, p + 1, pe - p - 1);
        {p++; cs = 120; goto _out;}
    }
	goto st120;
tr7:
#line 106 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                               //解析完成
        parser->body_start = p - buffer + 1; 
        if(parser->header_done != NULL)
            parser->header_done(parser->data, p + 1, pe - p - 1);
        {p++; cs = 120; goto _out;}
    }
	goto st120;
tr9:
#line 53 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                        //当前解析字段长度
        parser->field_len = LEN(field_start, p);
    }
#line 57 "/programs/nemo/src/net/http/http_client_parser.rl"
	{ MARK(mark, p); }
#line 67 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                        //字符串http报文起始处                                 
        if(parser->http_field != NULL) {
            parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
        }
    }
#line 106 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                               //解析完成
        parser->body_start = p - buffer + 1; 
        if(parser->header_done != NULL)
            parser->header_done(parser->data, p + 1, pe - p - 1);
        {p++; cs = 120; goto _out;}
    }
	goto st120;
tr15:
#line 67 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                        //字符串http报文起始处                                 
        if(parser->http_field != NULL) {
            parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
        }
    }
#line 106 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                               //解析完成
        parser->body_start = p - buffer + 1; 
        if(parser->header_done != NULL)
            parser->header_done(parser->data, p + 1, pe - p - 1);
        {p++; cs = 120; goto _out;}
    }
	goto st120;
tr74:
#line 63 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                             //非长连接
        parser->close = 1;
    }
#line 106 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                               //解析完成
        parser->body_start = p - buffer + 1; 
        if(parser->header_done != NULL)
            parser->header_done(parser->data, p + 1, pe - p - 1);
        {p++; cs = 120; goto _out;}
    }
	goto st120;
st120:
	if ( ++p == pe )
		goto _test_eof120;
case 120:
#line 239 "/programs/nemo/src/net/http/http_client_parser.rl.cc"
	goto st0;
tr4:
#line 90 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                         //块大小
        parser->chunked = 1;
        parser->content_len = strtol(PTR_TO(mark), NULL, 16);
        parser->chunks_done = parser->content_len <= 0;

        if(parser->chunks_done && parser->last_chunk) {
            parser->last_chunk(parser->data, PTR_TO(mark), LEN(mark, p));
        } else if(parser->chunk_size != NULL) {
            parser->chunk_size(parser->data, PTR_TO(mark), LEN(mark, p));
        } // else skip it
    }
	goto st3;
tr10:
#line 53 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                        //当前解析字段长度
        parser->field_len = LEN(field_start, p);
    }
#line 57 "/programs/nemo/src/net/http/http_client_parser.rl"
	{ MARK(mark, p); }
#line 67 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                        //字符串http报文起始处                                 
        if(parser->http_field != NULL) {
            parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
        }
    }
	goto st3;
tr16:
#line 67 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                        //字符串http报文起始处                                 
        if(parser->http_field != NULL) {
            parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
        }
    }
	goto st3;
tr75:
#line 63 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                             //非长连接
        parser->close = 1;
    }
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 287 "/programs/nemo/src/net/http/http_client_parser.rl.cc"
	if ( (*p) == 10 )
		goto tr7;
	goto st0;
tr6:
#line 90 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                         //块大小
        parser->chunked = 1;
        parser->content_len = strtol(PTR_TO(mark), NULL, 16);
        parser->chunks_done = parser->content_len <= 0;

        if(parser->chunks_done && parser->last_chunk) {
            parser->last_chunk(parser->data, PTR_TO(mark), LEN(mark, p));
        } else if(parser->chunk_size != NULL) {
            parser->chunk_size(parser->data, PTR_TO(mark), LEN(mark, p));
        } // else skip it
    }
	goto st4;
tr12:
#line 53 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                        //当前解析字段长度
        parser->field_len = LEN(field_start, p);
    }
#line 57 "/programs/nemo/src/net/http/http_client_parser.rl"
	{ MARK(mark, p); }
#line 67 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                        //字符串http报文起始处                                 
        if(parser->http_field != NULL) {
            parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
        }
    }
	goto st4;
tr18:
#line 67 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                        //字符串http报文起始处                                 
        if(parser->http_field != NULL) {
            parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
        }
    }
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 331 "/programs/nemo/src/net/http/http_client_parser.rl.cc"
	switch( (*p) ) {
		case 33: goto tr8;
		case 124: goto tr8;
		case 126: goto tr8;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr8;
		} else if ( (*p) >= 35 )
			goto tr8;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr8;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr8;
		} else
			goto tr8;
	} else
		goto tr8;
	goto st0;
tr8:
#line 51 "/programs/nemo/src/net/http/http_client_parser.rl"
	{ MARK(field_start, p); }
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 363 "/programs/nemo/src/net/http/http_client_parser.rl.cc"
	switch( (*p) ) {
		case 10: goto tr9;
		case 13: goto tr10;
		case 33: goto st5;
		case 59: goto tr12;
		case 61: goto tr13;
		case 124: goto st5;
		case 126: goto st5;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st5;
		} else if ( (*p) >= 35 )
			goto st5;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st5;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st5;
		} else
			goto st5;
	} else
		goto st5;
	goto st0;
tr13:
#line 53 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                        //当前解析字段长度
        parser->field_len = LEN(field_start, p);
    }
#line 57 "/programs/nemo/src/net/http/http_client_parser.rl"
	{ MARK(mark, p); }
	goto st6;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
#line 403 "/programs/nemo/src/net/http/http_client_parser.rl.cc"
	switch( (*p) ) {
		case 33: goto tr14;
		case 124: goto tr14;
		case 126: goto tr14;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr14;
		} else if ( (*p) >= 35 )
			goto tr14;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr14;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr14;
		} else
			goto tr14;
	} else
		goto tr14;
	goto st0;
tr14:
#line 57 "/programs/nemo/src/net/http/http_client_parser.rl"
	{ MARK(mark, p); }
	goto st7;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
#line 435 "/programs/nemo/src/net/http/http_client_parser.rl.cc"
	switch( (*p) ) {
		case 10: goto tr15;
		case 13: goto tr16;
		case 33: goto st7;
		case 59: goto tr18;
		case 124: goto st7;
		case 126: goto st7;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st7;
		} else if ( (*p) >= 35 )
			goto st7;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st7;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st7;
		} else
			goto st7;
	} else
		goto st7;
	goto st0;
tr2:
#line 49 "/programs/nemo/src/net/http/http_client_parser.rl"
	{MARK(mark, p); }
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 470 "/programs/nemo/src/net/http/http_client_parser.rl.cc"
	if ( (*p) == 84 )
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) == 84 )
		goto st10;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( (*p) == 80 )
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( (*p) == 47 )
		goto st12;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st13;
	goto st0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	if ( (*p) == 46 )
		goto st14;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st13;
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st15;
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	if ( (*p) == 32 )
		goto tr26;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st15;
	goto st0;
tr26:
#line 85 "/programs/nemo/src/net/http/http_client_parser.rl"
	{	                                    //http版本
        if(parser->http_version != NULL)
            parser->http_version(parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 538 "/programs/nemo/src/net/http/http_client_parser.rl.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr27;
	goto st0;
tr27:
#line 49 "/programs/nemo/src/net/http/http_client_parser.rl"
	{MARK(mark, p); }
	goto st17;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
#line 550 "/programs/nemo/src/net/http/http_client_parser.rl.cc"
	if ( (*p) == 32 )
		goto tr28;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st17;
	goto st0;
tr28:
#line 78 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                        //状态码
        parser->status = strtol(PTR_TO(mark), NULL, 10);

        if(parser->status_code != NULL)
            parser->status_code(parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st18;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
#line 569 "/programs/nemo/src/net/http/http_client_parser.rl.cc"
	if ( (*p) == 10 )
		goto st0;
	goto tr30;
tr30:
#line 49 "/programs/nemo/src/net/http/http_client_parser.rl"
	{MARK(mark, p); }
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 581 "/programs/nemo/src/net/http/http_client_parser.rl.cc"
	switch( (*p) ) {
		case 10: goto tr32;
		case 13: goto tr33;
	}
	goto st19;
tr45:
#line 67 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                        //字符串http报文起始处                                 
        if(parser->http_field != NULL) {
            parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
        }
    }
	goto st20;
tr32:
#line 73 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                      //原因字段
        if(parser->reason_phrase != NULL)
            parser->reason_phrase(parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st20;
tr42:
#line 57 "/programs/nemo/src/net/http/http_client_parser.rl"
	{ MARK(mark, p); }
#line 67 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                        //字符串http报文起始处                                 
        if(parser->http_field != NULL) {
            parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
        }
    }
	goto st20;
tr111:
#line 67 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                        //字符串http报文起始处                                 
        if(parser->http_field != NULL) {
            parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
        }
    }
#line 102 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                      //分块解析
        parser->chunked = 1;
    }
	goto st20;
tr113:
#line 102 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                      //分块解析
        parser->chunked = 1;
    }
	goto st20;
tr158:
#line 59 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                  //body长度
        parser->content_len = strtol(PTR_TO(mark), NULL, 10);
    }
#line 67 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                        //字符串http报文起始处                                 
        if(parser->http_field != NULL) {
            parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
        }
    }
	goto st20;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
#line 646 "/programs/nemo/src/net/http/http_client_parser.rl.cc"
	switch( (*p) ) {
		case 10: goto tr7;
		case 13: goto st3;
		case 33: goto tr35;
		case 67: goto tr36;
		case 84: goto tr37;
		case 99: goto tr36;
		case 116: goto tr37;
		case 124: goto tr35;
		case 126: goto tr35;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr35;
		} else if ( (*p) >= 35 )
			goto tr35;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr35;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr35;
		} else
			goto tr35;
	} else
		goto tr35;
	goto st0;
tr35:
#line 51 "/programs/nemo/src/net/http/http_client_parser.rl"
	{ MARK(field_start, p); }
	goto st21;
tr76:
#line 63 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                             //非长连接
        parser->close = 1;
    }
#line 51 "/programs/nemo/src/net/http/http_client_parser.rl"
	{ MARK(field_start, p); }
	goto st21;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
#line 692 "/programs/nemo/src/net/http/http_client_parser.rl.cc"
	switch( (*p) ) {
		case 33: goto st21;
		case 58: goto tr39;
		case 124: goto st21;
		case 126: goto st21;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st21;
		} else if ( (*p) >= 35 )
			goto st21;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st21;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto st0;
tr41:
#line 57 "/programs/nemo/src/net/http/http_client_parser.rl"
	{ MARK(mark, p); }
	goto st22;
tr39:
#line 53 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                        //当前解析字段长度
        parser->field_len = LEN(field_start, p);
    }
	goto st22;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
#line 731 "/programs/nemo/src/net/http/http_client_parser.rl.cc"
	switch( (*p) ) {
		case 10: goto tr42;
		case 13: goto tr43;
		case 32: goto tr41;
	}
	if ( 9 <= (*p) && (*p) <= 12 )
		goto tr41;
	goto tr40;
tr40:
#line 57 "/programs/nemo/src/net/http/http_client_parser.rl"
	{ MARK(mark, p); }
	goto st23;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
#line 748 "/programs/nemo/src/net/http/http_client_parser.rl.cc"
	switch( (*p) ) {
		case 10: goto tr45;
		case 13: goto tr46;
	}
	goto st23;
tr46:
#line 67 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                        //字符串http报文起始处                                 
        if(parser->http_field != NULL) {
            parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
        }
    }
	goto st24;
tr33:
#line 73 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                      //原因字段
        if(parser->reason_phrase != NULL)
            parser->reason_phrase(parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st24;
tr43:
#line 57 "/programs/nemo/src/net/http/http_client_parser.rl"
	{ MARK(mark, p); }
#line 67 "/programs/nemo/src/net/http/http_client_parser.rl"
	{                                        //字符串http报文起始处                                 
        if(parser->http_field != NULL) {
            parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
        }
    }
	goto st24;
tr159:
#line 59 "/programs/nemo/src/net/http/http_client_parser.rl"
